2023-01-10  Mark Wielaard  <mark@klomp.org>

	* readelf.c (get_debug_elf_data): New function.
	(print_debug_abbrev_section): Use get_debug_elf_data.
	(print_debug_addr_section): Likewise.
	(print_debug_aranges_section): Likewise.
	(print_debug_rnglists_section): Likewise.
	(print_debug_ranges_section): Likewise.
	(print_debug_frame_section): Likewise.
	(print_debug_units): Likewise.
	(print_debug_line_section): Likewise.
	(print_debug_loclists_section): Likewise.
	(print_debug_loc_section): Likewise.
	(print_debug_macinfo_section): Likewise.
	(print_debug_macro_section): Likewise.
	(print_debug_str_section): Likewise.
	(print_debug_str_offsets_section): Likewise.
	(print_debug_pubnames_section): Likewise.

2022-12-21  Shahab Vahedi  <shahab@synopsys.email>

	* elflint.c (valid_e_machine): Add EM_ARCV2.

2022-12-02  Hengqi Chen  <hengqi.chen@gmail.com>

	* elflint.c (valid_e_machine): Add EM_LOONGARCH.

2022-11-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (get_dynscn_addrs): Check gelf_getdyn doesn't
	return NULL.

2022-11-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (handle_dynamic): Check phdr != NULL when
	use_dynamic_segment, otherwise check shdr != NULL.

2022-10-28  Arsen Arsenović  <arsen@aarsen.me>

	* readelf.c (options): Add Binutils-style --syms alias.

2022-10-19  Mark Wielaard  <mark@klomp.org>

	* readelf.c (dwarf_loc_list_encoding_string): Handle
	DW_LLE_GNU_view_pair.
	(print_debug_loclists_section): Likewise.

2022-09-20  Yonggang Luo  <luoyonggang@gmail.com>

	* arlib.h: Use BYTE_ORDER, LITTLE_ENDIAN and BIG_ENDIAN.

2022-08-28  Mark Wielaard  <mark@klomp.org>

	* ar.c (do_oper_extract): Predecrement instance before compare
	to zero.
	(do_oper_delete): Likewise.

2022-08-10  Andreas Schwab  <schwab@suse.de>

	* readelf.c (print_attributes): Also handle SHT_RISCV_ATTRIBUTES.

2022-08-09  Andreas Schwab  <schwab@suse.de>

	* elflint.c (check_program_header): Don't complain about p_filesz