@@ -1,5 +1,11 @@
 2023-01-19  Mark Wielaard  <mark@klomp.org>
 
+	* run-addr2line-C-test.sh: New test.
+	* Makefile.am (TESTS): Add run-addr2line-C-test.sh.
+	(EXTRA_DIST): Likewise.
+
+2023-01-19  Mark Wielaard  <mark@klomp.org>
+
 	* run-debuginfod-query-retry.sh: Use libdebuginfod.so.1 instead
 	of /bin/sh as test file.
 
