@@ -1,3 +1,8 @@
+2023-01-22  Mark Wielaard  <mark@klomp.org>
+
+	* addr2line.c (options): Separate --demangle and -C.
+	(parse_opt): Ignore 'b'.
+
 2023-01-10  Mark Wielaard  <mark@klomp.org>
 
 	* readelf.c (get_debug_elf_data): New function.
